
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#4146] Fix issue where Content Types were always binary when created
- [#6470] Fix issue where Media Sources could not be protected due to missing reference in principal_targets setting
- [#6520] Fix issue with Quick Create Resource and default settings
- [#6510] Fix minify issue with virtual dirs inside the document root
- [#5229] Fix issue where changing parent did not reload Resource edit page
- [#6513] Better handling for large error.log files in mgr
- [#6519] Ensure JS config gets working context config
- [#6507] Add missing Media Source plugin events
- [#6505] Remove htmlentities on date output filter
- Allow PDO driver options to be defined in MODX config
- [#6383] Add index.php to minify paths in mgr templates

MODX Revolution 2.2.0-rc-3 (December 22, 2011)
====================================
- [#6247] Fix additional minify issues with CMP controllers in MODX_ASSETS_PATH
- [#6428] Fix improperly designated tooltip and UI for create namespace window
- Fix various regression issues with rename/delete files/directories in the Files tree
- Ensure hideFiles property works for the files tree
- [#6383] Add index.php to minify paths
- Prevent TVs tab from showing in Resources if the only TVs are of type "hidden"
- [#6413] Fix missing date_timezone setting description
- [#6297] Prevent invalid characters in property set names
- [#5997] Fix issue where components dirs were being created in assets with non-standard assets directory paths
- Fix issue where resource ID was not being passed to FC rule checks
- [#6417] Fix issue with modResource class_key being incorrectly set
- Adjust modResponse contentType loading to allow overriding in custom resource classes
- Fix critical timezone issue introduced for [#6077]

MODX Revolution 2.2.0-rc-2 (December 16, 2011)